--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ theme:
   dribbble: 
   facebook: 
   flickr: 
-  github: sfrapoport
+  github: 
   google_plus: 
   instagram: 
   linkedin:  # full URL
